# acdh-xml-pyutils

./: .buildinfo  .cookietemple.yml  .gitignore  Dockerfile  README.md  README.rst  Untitled.ipynb  acdh_xml_pyutils.html  authors.html  changelog.html  code_of_conduct.html  cookietemple.cfg  genindex.html  index.html  installation.html  mkdocs.yml  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html
.github/workflows/: build_package.yml  lint.yml  publish_package.yml  pypi.yml  run_codecov.yml  run_tox_testsuite.yml  test.yml
_modules/: index.html
_modules/acdh_xml_pyutils/: xml.html
acdh_xml_pyutils/: __init__.py  xml.py
docs/: reference.md
makefiles/: Linux.mk  Windows.mk
src/acdh_xml_pyutils/: __init__.py
tests/: test_xml.py
