[project]
name = "acdh-xml-pyutils"
version = "2.0.0"
description = "Utility functions to work with XML"
readme = "README.md"
authors = [
    { name = "Peter Andorfer", email = "peter.andorfer@oeaw.ac.at" }
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.0.2",
    "requests>=2.32.5",
]

[project.urls]
Documentation = "https://acdh-oeaw.github.io/acdh-xml-pyutils/"
Repository = "https://github.com/acdh-oeaw/acdh-xml-pyutils.git"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
